--- a/frontend/real-estate-app/src/Pages/Clients/Clients.css
+++ b/frontend/real-estate-app/src/Pages/Clients/Clients.css
@@ -93,3 +93,47 @@
   border: none;
   cursor: pointer;
 }
+
+
+@media (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+   /* .sidebar {
+    position: relative;
+    width: 100%;
+    top: 0;
+    left: 0;
+    margin-bottom: 10px;
+    background: #f8f8f8;
+    z-index: 10;
+  } */
+
+  .main {
+    width: 100%;
+    margin: 0;
+    margin-top: 2vh;
+  }
+
+  .card-container {
+    justify-content: center;
+  }
+
+  .client-card {
+    flex: 0 1 100%;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .left-section {
+    width: 100%;
+    height: 200px;
+  }
+
+  .right-section {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
