--- a/frontend/real-estate-app/src/Pages/Landing/Landing.css
+++ b/frontend/real-estate-app/src/Pages/Landing/Landing.css
@@ -2,15 +2,11 @@
     /* background-image: url("../../assets/images/mumbai-skyline.jpg"); */
     background:
         linear-gradient(rgba(0, 123, 255, 0.5), rgba(7, 31, 56, 0.5)),
-        /* blue transparent overlay */
         url("../../assets/images/mumbai-skyline.jpg");
 
     background-size: cover;
-    /* Scale image to cover entire area */
     background-position: center;
-    /* Center image */
     background-repeat: no-repeat;
-    /* Prevent repeating */
     width: 100vw;
     height: 100vh;
     filter: brightness(40%);
@@ -21,37 +17,41 @@
 }
 
 .content {
-   
-   
+
+
     position: absolute;
-    top: 20vh;  
+    top: 20vh;
 
     width: 100vw;
     color: white;
     /* border: 1px solid red; */
     display: flex;
-  
+
 }
-.left{
+
+.left {
     /* border: 1px solid red; */
-    padding-left:10vw ;
+    padding-left: 10vw;
     width: 50%;
-     font-size: 6vw;
-     padding-top: 10%;
-   
+    font-size: 6vw;
+    padding-top: 10%;
+
 }
-.right{
+
+.right {
     background-color: #27318cf3;
     display: flex;
-      align-items: center;
+    align-items: center;
     flex-direction: column;
-    min-width:  20%;
+    min-width: 20%;
     padding: 1vw 3vw;
     border-radius: 5px;
     box-shadow: 5px 5px 25px black;
     margin-top: 10vh;
 }
-.content input ,.content button{
+
+.content input,
+.content button {
     background-color: #fff;
     margin: 0.5em;
     padding: 0.5em;
@@ -60,16 +60,19 @@
     border-radius: 5px;
     outline: none;
 }
-.content button{
-     color: rgb(243, 243, 243);
-      background-color: #000000;
-      width: 100%;
+
+.content button {
+    color: rgb(243, 243, 243);
+    background-color: #000000;
+    width: 100%;
 }
-.right a{
+
+.right a {
     display: inline;
 }
-.right .title{
-   margin-bottom: 2vw;
+
+.right .title {
+    margin-bottom: 2vw;
     font-size: 2em;
 }
 
@@ -78,4 +81,21 @@
     display: flex;
     padding: 10px;
     gap: 10px;
+}
+
+@media (max-width: 768px) {
+    .content{
+        flex-direction: column;
+        gap: 5vh;
+    }
+     .right{
+        min-width: 80%;
+        margin: auto ;
+       
+    }
+    .left{
+        width: 90%;
+        margin: 10vh auto;
+        font-size: 2.5em;
+    }
 }
