--- a/frontend/real-estate-app/src/components/Agent/AgentMyProp.css
+++ b/frontend/real-estate-app/src/components/Agent/AgentMyProp.css
@@ -1,8 +1,17 @@
-.card-container{
+.card-container {
     background-color: #ffffff;
-   
+
 }
-.main-container{
+
+.main-container {
     background: #ffffff;
-    min-width: 100vh;
+  
+}
+
+
+@media (max-width:768px) {
+    .main-container {
+       
+        width: 100vw;
+    }
 }
