--- a/frontend/real-estate-app/src/components/Client/NewlyAdded.css
+++ b/frontend/real-estate-app/src/components/Client/NewlyAdded.css
@@ -10,13 +10,15 @@
 }
 
 .newly-added p {
-  color: #666;
+  color: #000000;
   margin-bottom: 2vh;
+  margin:  1vw;
+ 
 }
 
 .card-row {
   display: flex;
-  gap: 4vw;
+  gap: 2vw;
   overflow-x: auto;
   scroll-behavior: smooth;
   padding-bottom: 2vh;
@@ -26,19 +28,19 @@
   display: none;
 }
 
-.property-card {
-  width: 20vw;
+.newly-added .property-card {
+  width: 35vw;
   flex: 0 0 auto;
-  background: white;
+  background: rgba(60, 71, 106, 0.509);
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  padding: 1rem;
+  padding: 0.5rem;
   margin: 10px;
 }
 
 .property-card img {
   width: 100%;
-  height: 28vh;
+  height: 35vh;
   object-fit: cover;
   border-radius: 8px;
 }
