--- a/frontend/real-estate-app/src/components/Client/PropertyCard.css
+++ b/frontend/real-estate-app/src/components/Client/PropertyCard.css
@@ -95,9 +95,11 @@
 }
 
 /*  Mobile Responsive */
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .client-card {
     flex-direction: column;
+    align-items: center;
+    gap: 3vh;
     width: 90vw;
     padding: 4vw;
   }
@@ -109,7 +111,7 @@
 
   .property-img {
     width: 100%;
-    height: 28vh;
+    height: 25vh;
   }
 
   .title-row {
@@ -120,8 +122,14 @@
 
   .interest-btn,
   .delete-btn {
+   
     width: 100%;
     padding: 1em;
     font-size: 1.1em;
+  }
+  .btn-section-prop{
+   
+    display: flex;
+    width: 80vw;
   }
 }
