--- a/frontend/real-estate-app/src/components/Navbar/Navbar.css
+++ b/frontend/real-estate-app/src/components/Navbar/Navbar.css
@@ -42,13 +42,14 @@ font-size: 40px;
 }
 .search {
   height:100%;
-  /* border-radius: 5px 0px 0px 5px;; */
+  border-radius: 5px 0px 0px 5px;;
   border: none;
   width: 500px;
   background-color: #fff;
   color:black;
-  font-size: 1.1em;
-  padding:  3px;
+  font-size: 1.3em;
+  
+  padding:  3px 10px;
   box-sizing: border-box;
   outline: none;
 }
@@ -74,7 +75,6 @@ font-size: 40px;
 }
 .search-filter{
   height: 100%;
-
     cursor:pointer;
 }
 
@@ -155,4 +155,38 @@ font-size: 40px;
 
 .dropdown-menu p:hover {
   background-color: #f5f5f5;
+}
+
+
+
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 15px;
+  }
+
+  .filter {
+    width: 100%;
+  }
+
+  .search {
+    width: 100%;
+    
+  }
+
+  .search-icon {
+    padding: 0 15px;
+  }
+
+  .user .logo-title {
+    font-size: 18px;
+  }
+  .user{
+    position: absolute;
+       top: 2vw;
+    right: 2vw;
+  }
 }
